--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm-6 align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a href="#reserveForm" class="btn btn-sm btn-block btn-warning" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -69,8 +72,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p> 
+                    </div>
+                    <img class="ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -89,6 +97,64 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content align-items-center justify-content-center" id="reserveForm">
+            <div class="col-12 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <fieldset class="form-group">
+                                <div class="row">
+                                    <legend class="col-sm-3 col-form-label">Number of Guests</legend>
+                                    <div class="col-sm-9 align-self-center">
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="guest1" name="numGuests">
+                                            <label for="guest1" class="form-check-label">1</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="guest2" name="numGuests">
+                                            <label for="guest2" class="form-check-label">2</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="guest3" name="numGuests">
+                                            <label for="guest3" class="form-check-label">3</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="guest4" name="numGuests">
+                                            <label for="guest4" class="form-check-label">4</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="guest5" name="numGuests">
+                                            <label for="guest5" class="form-check-label">5</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="guest6" name="numGuests">
+                                            <label for="guest6" class="form-check-label">6</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-3 col-form-label" for="date">Date and Time</label>
+                                <div class="col-12 col-sm-4">
+                                    <input class="form-control" id="date" type="text" placeholder="Date" name="date">
+                                </div>
+                                <div class="col-12 col-sm-4">
+                                    <input class="form-control" id="name" type="text" placeholder="Time" name="name">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-sm-3 col-9">
+                                    <button type="submit" class="btn btn-primary text-white">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer class="footer">
