--- a/index.html
+++ b/index.html
@@ -88,12 +88,89 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a href="#reserveForm" class="btn btn-sm btn-block btn-warning" data-toggle="tooltip" data-html="true" title="or Call us at <br><strong>+852 12345678</strong>" 
-                        data-placement="bottom"  role="button">Reserve Table</a>
+                    <!-- <a href="#reserveForm" class="btn btn-sm btn-block btn-warning" data-toggle="tooltip" data-html="true" title="or Call us at <br><strong>+852 12345678</strong>" 
+                        data-placement="bottom"  role="button">Reserve Table</a> -->
+                    <a class="btn btn-sm btn-block btn-warning text-white" data-toggle="modal" data-target="#reserveForm" href="#" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div id="reserveForm" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <fieldset class="form-group">
+                            <div class="row">
+                                <legend class="col-sm-3 col-form-label">Number of Guests</legend>
+                                <div class="col-sm-9 align-self-center">
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="guest1" name="numGuests">
+                                        <label for="guest1" class="form-check-label">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="guest2" name="numGuests">
+                                        <label for="guest2" class="form-check-label">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="guest3" name="numGuests" checked>
+                                        <label for="guest3" class="form-check-label">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="guest4" name="numGuests">
+                                        <label for="guest4" class="form-check-label">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="guest5" name="numGuests">
+                                        <label for="guest5" class="form-check-label">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" class="form-check-input" id="guest6" name="numGuests">
+                                        <label for="guest6" class="form-check-label">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </fieldset>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3 col-form-label" for="non-smoking">Section</label>
+                            <div class="col-12 col-sm align-self-center">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="options" id="non-smoking" autocomplete="off" checked> Non-smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="options" id="smoking" autocomplete="off"> Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3 col-form-label" for="date">Date and Time</label>
+                            <div class="col-12 col-sm-4 align-self-center">
+                                <input class="form-control" id="date" type="text" placeholder="Date" name="date">
+                            </div>
+                            <div class="col-12 col-sm-4 align-self-center">
+                                <input class="form-control" id="name" type="text" placeholder="Time" name="name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-sm-3 col">
+                                <button type="button" class="btn btn-secondary text-white" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary text-white">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row row-content">
@@ -184,7 +261,7 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center justify-content-center" id="reserveForm">
+        <!-- <div class="row row-content align-items-center justify-content-center" id="reserveForm">
             <div class="col-12 col-sm-8">
                 <div class="card">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
@@ -239,7 +316,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
@@ -289,11 +366,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
         $(document).ready(function(){
             $('[data-toggle="tooltip"]').tooltip();
         })
-    </script>
+    </script> -->
 </body>
 
 </html>
